# pgrx

./: .envrc  .git-blame-ignore-revs  .gitignore  .licensure.yml  CONTRIBUTING.md  CROSS_COMPILE.md  Cargo.toml  DESIGN-DECISIONS.md  DESIGN.md  HOW_TO_CUT_A_PGRX_RELEASE.md  HOW_TO_CUT_A_PGX_RELEASE.md  LICENSE  MEMORY_CHECKING.md  README.md  SAFETY.md  deny.toml  finalize-release.sh  flake.nix  linux-ghrunner-setup.sh  logo.pxm  prepare-release.sh  publish.sh  result  run-example.sh  security.md  shell.nix  spare_pstring_stuff.rs  update-versions.sh  upgrade-deps.sh
cargo-pgrx/: Cargo.toml  README.md  build.rs  default.nix
cargo-pgrx/src/: env.rs  main.rs  manifest.rs  metadata.rs  pgrx_pg_sys_stub.rs  profile.rs
cargo-pgrx/src/command/: connect.rs  get.rs  info.rs  init.rs  install.rs  mod.rs  new.rs  package.rs  pgrx.rs  run.rs  schema.rs  start.rs  status.rs  stop.rs  sudo_install.rs  test.rs  upgrade.rs  version.rs
cargo-pgrx/src/templates/: bgworker_lib_rs  cargo_toml  control  lib_rs
cargo-pgx/: Cargo.toml  README.md  default.nix  result
cargo-pgx/src/: build_plan.rs  cli.yml  crate_template.rs  env.rs  extension_installer.rs  main.rs  manifest.rs  metadata.rs  pgx_pg_sys_stub.rs  profile.rs  property_inspector.rs  schema_generator.rs  test_runner.rs  validate.rs
cargo-pgx/src/command/: config.rs  connect.rs  cross_options.rs  get.rs  init.rs  install.rs  mod.rs  new.rs  package.rs  pg_config.rs  pgx.rs  run.rs  schema.rs  start.rs  status.rs  stop.rs  test.rs  version.rs
cargo-pgx/src/commands/: connect.rs  get.rs  init.rs  install.rs  mod.rs  new.rs  package.rs  run.rs  schema.rs  schema2.rs  start.rs  status.rs  stop.rs  (+1 more)
examples/srf/: Cargo.toml  srf.control
pg-bridge-tests/: Cargo.toml  pg_bridge_tests.control
pg-bridge-tests/sql/: load-order.txt
pg-bridge-tests/src/: fcinfo_tests.rs  framework.rs  lib.rs  log_tests.rs  spi_tests.rs  tests.rs
pgrx/: Cargo.toml  deny.toml
pgrx-bindgen/: Cargo.toml
pgrx-bindgen/src/: build.rs
pgrx-examples/custom_sql/: Cargo.toml
pgrx-examples/shmem/: Cargo.toml  insert.sql
pgrx-macros/: Cargo.toml
pgrx-macros/src/: lib.rs  operators.rs  rewriter.rs
pgrx-pg-config/: Cargo.toml
pgrx-pg-config/src/: cargo.rs  lib.rs  path_methods.rs
pgrx-pg-sys/: Cargo.toml  build.rs  pgrx-cshim.c
pgrx-pg-sys/cshim/: Makefile  pgrx-cshim.c
pgrx-pg-sys/include/: pg11.h  pg12.h  pg13.h  pg14.h  pg15.h  pg16.h  pg17.h
pgrx-pg-sys/src/: cshim.rs  include.rs  lib.rs  node.rs  pg11.rs  pg11_oids.rs  pg12.rs  pg12_oids.rs  pg13.rs  pg13_oids.rs  pg14.rs  pg14_oids.rs  pg15.rs  pg16.rs  pg16_oids.rs  port.rs
pgrx-sql-entity-graph/: Cargo.toml
pgrx-sql-entity-graph/src/: composite_type.rs  control_file.rs  enrich.rs  extern_args.rs  finfo.rs  fmt.rs  lib.rs  lifetimes.rs  mapping.rs  pgrx_attribute.rs  pgrx_sql.rs  positioning_ref.rs  used_type.rs
pgrx-tests/: Cargo.toml  README.md
pgrx-tests/src/: framework.rs  lib.rs  proptest.rs
pgrx-tests/tests/: ui.rs
pgrx-version-updater/: Cargo.toml
pgrx-version-updater/src/: main.rs
pgrx/src/: aggregate.rs  array.rs  atomics.rs  bgworkers.rs  callbacks.rs  callconv.rs  deriving.rs  enum_helper.rs  fcall.rs  fcinfo.rs  ffi.rs  fn_call.rs  guc.rs  heap_tuple.rs  hooks.rs  htup.rs  inoutfuncs.rs  itemptr.rs  iter.rs  layout.rs  lib.rs  list.rs  lwlock.rs  mem.rs  memcx.rs  memcxt.rs  misc.rs  namespace.rs  nodes.rs  nullable.rs  palloc.rs  pg_catalog.rs  pg_sys.rs  pgbox.rs  prelude.rs  rel.rs  shmem.rs  shmem_hash.rs  slice.rs  spi.rs  (+9 more)
pgx/: .gitignore  Cargo.toml  build.rs  pgx.control
pgx-examples/aggregate/: Cargo.toml  README.md  aggregate.control
pgx-examples/arrays/: Cargo.toml  arrays.control
pgx-examples/custom_types/: Cargo.toml  README.md  custom_types.control  out.dot
pgx-examples/shmem/: Cargo.toml  shmem.control
pgx-examples/triggers/: Cargo.toml  triggers.control
pgx-macros/: Cargo.toml  README.md  build.rs
pgx-macros/src/: lib.rs  operators.rs  pg_extern_inventory.rs  rewriter.rs
pgx-macros/static/: demo.sql
pgx-paths/: Cargo.toml  README.md
pgx-paths/src/: lib.rs
pgx-pg-config/: Cargo.toml  README.md
pgx-pg-config/src/: lib.rs  path_methods.rs
pgx-pg-sys/: .gitignore  Cargo.toml  README.md  build.rs  compile-postgres.sh  download-postgres.sh
pgx-pg-sys-stub/: Cargo.toml  README.md
pgx-pg-sys/cshim/: Makefile  pgx-cshim.c  pgx-cshim.h
pgx-pg-sys/docsrs-hacks/: common.rs  pg10_specific.rs  pg11_specific.rs  pg12_specific.rs
pgx-pg-sys/generated-bindings/: README.md  common.rs  pg10_specific.rs  pg11_specific.rs  pg12_specific.rs
pgx-pg-sys/include/: pg10.h  pg11.h  pg12.h  pg13.h  pg14.h  pg15.h
pgx-pg-sys/src/: common.rs  guard.rs  lib.rs  pg10.h  pg10.rs  pg10_oids.rs  pg10_specific.rs  pg11.h  pg11.rs  pg11_oids.rs  pg11_specific.rs  pg12.h  pg12.rs  pg12_oids.rs  pg12_specific.rs  pg13.rs  pg13_oids.rs  pg14.rs  pg14_oids.rs  pg15.rs
pgx-sql-entity-graph/: Cargo.toml  README.md
pgx-sql-entity-graph/src/: control_file.rs  enrich.rs  lib.rs  lifetimes.rs  mapping.rs  pgx_attribute.rs  pgx_sql.rs  positioning_ref.rs  used_type.rs
pgx-tests/: .gitignore  Cargo.toml  README.md  pgx_tests.control  result
pgx-tests/sql/: load-order.txt  pgx_tests-1.0.sql
pgx-tests/src/: fcinfo_tests.rs  framework.rs  lib.rs  log_tests.rs  node_tests.rs  spi_tests.rs  struct_type_tests.rs
pgx-utils/: Cargo.toml  README.md
pgx-utils/src/: aggregate_options.rs  lib.rs  operator_common.rs  pg_config.rs  rewriter.rs
pgx-version-updater/: Cargo.toml
pgx-version-updater/src/: main.rs
pgx/examples/: bgworkerdemo.rs
pgx/include/: pg10.h  pg11.h  pg12.h
pgx/src/: aggregate.rs  array.rs  atomics.rs  bgworkers.rs  callbacks.rs  codegen.rs  datum.rs  datum_compatible.rs  enum_helper.rs  exception.rs  fcinfo.rs  guard.rs  guc.rs  heap_tuple.rs  hooks.rs  htup.rs  inoutfuncs.rs  itemptr.rs  iter.rs  iterators.rs  layout.rs  lib.rs  list.rs  log.rs  lwlock.rs  memcxt.rs  misc.rs  namespace.rs  nodes.rs  oids.rs  pgbox.rs  prelude.rs  rel.rs  sendrecvfuncs.rs  shmem.rs  slice.rs  spi.rs  spinlock.rs  srf.rs  stringinfo.rs  (+7 more)
(+933 files in other folders)
