[workspace]
resolver = "2"
members = [
    "cargo-pgrx",
    "pgrx",
    "pgrx-macros",
    "pgrx-pg-config",
    "pgrx-pg-sys",
    "pgrx-sql-entity-graph",
    "pgrx-tests",
    "pgrx-version-updater",
    "pgrx-examples/aggregate",
    "pgrx-examples/arrays",
    "pgrx-examples/bad_ideas",
    "pgrx-examples/bgworker",
    "pgrx-examples/bytea",
    "pgrx-examples/composite_type",
    "pgrx-examples/custom_libname",
    "pgrx-examples/custom_types",
    "pgrx-examples/custom_sql",
    "pgrx-examples/datetime",
    "pgrx-examples/errors",
    "pgrx-examples/nostd",
    "pgrx-examples/numeric",
    "pgrx-examples/pgtrybuilder",
    "pgrx-examples/operators",
    "pgrx-examples/range",
    "pgrx-examples/schemas",
    "pgrx-examples/shmem",
    "pgrx-examples/spi",
    "pgrx-examples/srf",
    "pgrx-examples/strings",
    "pgrx-examples/triggers",
    "pgrx-examples/versioned_custom_libname_so",
    "pgrx-examples/versioned_so",
    "pgrx-examples/spi_srf",
]

[profile.dev.build-override]
opt-level = 3

[workspace.metadata.local-install]
cargo-pgrx = { path = "cargo-pgrx" }
