#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.
 
[workspace]
resolver = "2"
members = [
    "cargo-pgrx",
    "pgrx",
    "pgrx-macros",
    "pgrx-pg-config",
    "pgrx-pg-sys",
    "pgrx-sql-entity-graph",
    "pgrx-tests",
    "pgrx-version-updater",
    "pgrx-examples/aggregate",
    "pgrx-examples/arrays",
    "pgrx-examples/bad_ideas",
    "pgrx-examples/bgworker",
    "pgrx-examples/bytea",
    "pgrx-examples/composite_type",
    "pgrx-examples/custom_libname",
    "pgrx-examples/custom_types",
    "pgrx-examples/custom_sql",
    "pgrx-examples/datetime",
    "pgrx-examples/errors",
    "pgrx-examples/nostd",
    "pgrx-examples/numeric",
    "pgrx-examples/pgtrybuilder",
    "pgrx-examples/operators",
    "pgrx-examples/range",
    "pgrx-examples/schemas",
    "pgrx-examples/shmem",
    "pgrx-examples/spi",
    "pgrx-examples/srf",
    "pgrx-examples/strings",
    "pgrx-examples/triggers",
    "pgrx-examples/versioned_custom_libname_so",
    "pgrx-examples/versioned_so",
    "pgrx-examples/spi_srf",
]

[profile.dev]
# Only include line tables in debuginfo. This reduces the size of target/ (after
# running tests) by almost half, while keeping the part of debuginfo which
# people care about the most (the part used to produce backtraces). This seems
# like something we would generally want (when actually running in a debugger
# you can just comment out the line).
#
# That said, if it turns out to hurt development more than expected, we could
# move this to only toggle this in CI
debug = 'line-tables-only'

[profile.dev.build-override]
opt-level = 3

[workspace.metadata.local-install]
cargo-pgrx = { path = "cargo-pgrx" }
