#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.
 
[workspace]
resolver = "2"
members = [
    "cargo-pgrx",
    "pgrx",
    "pgrx-macros",
    "pgrx-pg-config",
    "pgrx-pg-sys",
    "pgrx-sql-entity-graph",
    "pgrx-tests",
    "pgrx-version-updater",
    "pgrx-examples/aggregate",
    "pgrx-examples/arrays",
    "pgrx-examples/bad_ideas",
    "pgrx-examples/bgworker",
    "pgrx-examples/bytea",
    "pgrx-examples/composite_type",
    "pgrx-examples/custom_libname",
    "pgrx-examples/custom_types",
    "pgrx-examples/custom_sql",
    "pgrx-examples/datetime",
    "pgrx-examples/errors",
    "pgrx-examples/nostd",
    "pgrx-examples/numeric",
    "pgrx-examples/pgtrybuilder",
    "pgrx-examples/operators",
    "pgrx-examples/range",
    "pgrx-examples/schemas",
    "pgrx-examples/shmem",
    "pgrx-examples/spi",
    "pgrx-examples/srf",
    "pgrx-examples/strings",
    "pgrx-examples/triggers",
    "pgrx-examples/versioned_custom_libname_so",
    "pgrx-examples/versioned_so",
    "pgrx-examples/spi_srf",
]


[workspace.metadata.local-install]
cargo-pgrx = { path = "cargo-pgrx" }

[workspace.dependencies]
pgrx-macros = { path = "./pgrx-macros", version = "=0.12.0-alpha.1" }
pgrx-pg-sys = { path = "./pgrx-pg-sys", version = "=0.12.0-alpha.1" }
pgrx-sql-entity-graph = { path = "./pgrx-sql-entity-graph", version = "=0.12.0-alpha.1" }
pgrx-pg-config = { path = "./pgrx-pg-config", version = "=0.12.0-alpha.1" }

cargo_metadata = "0.18.0"
cargo-edit = "0.12.2" # format-preserving edits to cargo.toml
cargo_toml = "0.19" # used for building projects
clap-cargo = { version = "0.14.0", features = [ "cargo_metadata" ] }
eyre = "~0.6.12" # simplifies error-handling
libc = "0.2" # FFI compat
owo-colors =  { version = "3.5", features = [ "supports-colors" ] } # for output highlighting
proc-macro2 = { version = "1.0.78", features = [ "span-locations" ] }
quote = "1.0.33"
regex = "1.1" # used for build/test
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
syn = { version = "2", features = [ "extra-traits", "full", "parsing" ] }
toml = "0.8" # our config files
toml_edit = "0.19.14" # format-preserving edits to toml files, used with cargo-edit
thiserror = "1"
unescape = "0.1.0" # for escaped-character-handling
url = "2.4.1" # the non-existent std::web
walkdir = "2" # directory recursion

[profile.dev]
# Only include line tables in debuginfo. This reduces the size of target/ (after
# running tests) by almost half, while keeping the part of debuginfo which
# people care about the most (the part used to produce backtraces). This seems
# like something we would generally want (when actually running in a debugger
# you can just comment out the line).
#
# That said, if it turns out to hurt development more than expected, we could
# move this to only toggle this in CI
debug = 'line-tables-only'

[profile.dev.build-override]
opt-level = 3
