#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.
 
[package]
name = "cargo-pgrx"
version = "0.10.0-beta.2"
authors = ["PgCentral Foundation, Inc. <contact@pgcentral.org>"]
license = "MIT"
description = "Cargo subcommand for 'pgrx' to make Postgres extension development easy"
homepage = "https://github.com/pgcentralfoundation/pgrx/"
repository = "https://github.com/pgcentralfoundation/pgrx/"
documentation = "https://docs.rs/cargo-pgrx"
categories = ["development-tools::cargo-plugins", "command-line-utilities", "database"]
keywords = ["database", "postgres", "postgresql", "extension"]
readme = "README.md"
exclude = [ "*.png" ]
edition = "2021"

[dependencies]
atty = "0.2.14"
cargo_metadata = "0.17.0"
cargo_toml = "0.15.3"
clap = { version = "4.3.19", features = [ "env", "suggestions", "cargo", "derive", "wrap_help" ] }
clap-cargo = { version = "0.11.0", features = [ "cargo_metadata" ] }
semver = "1.0.18"
owo-colors = { version = "3.5.0", features = [ "supports-colors" ] }
env_proxy = "0.4.1"
num_cpus = "1.16.0"
pgrx-pg-config = { path = "../pgrx-pg-config", version = "=0.10.0-beta.2" }
pgrx-sql-entity-graph = { path = "../pgrx-sql-entity-graph", version = "=0.10.0-beta.2" }
prettyplease = "0.2.12"
proc-macro2 = { version = "1.0.66", features = [ "span-locations" ] }
quote = "1.0.32"
rayon = "1.7.0"
regex = "1.9.1"
ureq = "2.7.1"
url = "2.4.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde-xml-rs = "0.6.0"
syn = { version = "2.0.18", features = [ "extra-traits", "full", "fold", "parsing" ] }
unescape = "0.1.0"
fork = "0.1.22"
libloading = "0.8.0"
object = "0.31.1"
once_cell = "1.18.0"
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }
flate2 = { version = "1.0.26", default-features = false, features = ["rust_backend"] }
tempfile = "3.7.0"
nix = { version = "0.26", default-features = false, features = ["user"] }

[features]
default = ["ureq/native-tls"]
rustls = ["ureq/tls"]
