#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.
 
[package]
name = "cargo-pgrx"
version = "0.12.0-alpha.1"
authors = ["PgCentral Foundation, Inc. <contact@pgcentral.org>"]
license = "MIT"
description = "Cargo subcommand for 'pgrx' to make Postgres extension development easy"
homepage = "https://github.com/pgcentralfoundation/pgrx/"
repository = "https://github.com/pgcentralfoundation/pgrx/"
documentation = "https://docs.rs/cargo-pgrx"
categories = ["development-tools::cargo-plugins", "command-line-utilities", "database"]
keywords = ["database", "postgres", "postgresql", "extension"]
readme = "README.md"
exclude = [ "*.png" ]
edition = "2021"

[dependencies]
pgrx-pg-config.workspace = true
pgrx-sql-entity-graph.workspace = true

cargo_metadata.workspace = true
cargo-edit.workspace = true
cargo_toml.workspace = true
clap-cargo.workspace = true
libc.workspace = true
regex.workspace = true
toml.workspace = true
toml_edit.workspace = true

clap = { version = "4.4.2", features = [ "env", "suggestions", "cargo", "derive", "wrap_help" ] }
jobslot = "0.2.12" # as seen in gmake -j{N}
semver = "1.0.20" # checking pgrx versions match
tempfile = "3.8.0"

# SQL schema generation
object = { version = "0.32.1", default-features = false, features = [ "std" ] }
proc-macro2.workspace = true
quote.workspace = true

# emit better diagnostics
color-eyre = "0.6.2"
eyre.workspace = true
owo-colors.workspace = true
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = [ "env-filter" ] }

# for downloading/unpacking things from the Postgres file servers
bzip2 = "0.4.4"
env_proxy = "0.4.1"
serde.workspace = true
serde-xml-rs = "0.6.0"
tar = "0.4.40"
ureq = { version = "2.8.0", default-features = false, features = [ "gzip" ] }
url.workspace = true

[features]
default = ["rustls"]
native-tls = ["ureq/native-tls"]
rustls = [
    "ureq/tls",
    "ureq/native-certs" # induces rustls to use the OS-level root of trust
]
