[package]
name = "cargo-pgx"
version = "0.6.0-alpha.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Cargo subcommand for 'pgx' to make Postgres extension development easy"
homepage = "https://github.com/tcdi/pgx"
repository = "https://github.com/tcdi/pgx"
documentation = "https://docs.rs/cargo-pgx"
categories = ["development-tools::cargo-plugins", "command-line-utilities", "database"]
keywords = ["database", "postgres", "postgresql", "extension"]
readme = "README.md"
exclude = [ "*.png" ]
edition = "2021"

[dependencies]
atty = "0.2.14"
cargo_metadata = "0.15.1"
cargo_toml = "0.11.8"
clap = { version = "4.0.23", features = [ "env", "suggestions", "cargo", "derive" ] }
clap-cargo = { version = "0.10.0", features = [ "cargo_metadata" ] }
semver = "1.0.14"
owo-colors = { version = "3.5.0", features = [ "supports-colors" ] }
env_proxy = "0.4.1"
num_cpus = "1.14.0"
pgx-pg-config = { path = "../pgx-pg-config", version = "=0.6.0-alpha.0" }
pgx-utils = { path = "../pgx-utils", version = "=0.6.0-alpha.0", features = ["syntax-highlighting"] }
prettyplease = "0.1.21"
proc-macro2 = { version = "1.0.47", features = [ "span-locations" ] }
quote = "1.0.21"
rayon = "1.5.3"
regex = "1.7.0"
ureq = "2.5.0"
url = "2.3.1"
serde = { version = "1.0.147", features = [ "derive" ] }
serde_derive = "1.0.147"
serde-xml-rs = "0.5.1"
syn = { version = "1.0.103", features = [ "extra-traits", "full", "fold", "parsing" ] }
unescape = "0.1.0"
fork = "0.1.20"
libloading = "0.7.4"
object = "0.28.4"
once_cell = "1.16.0"
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }

[features]
default = ["ureq/native-tls"]
rustls = ["ureq/tls"]
