[package]
name = "pg-bridge-tests"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
pg-bridge = { path = "../pg-bridge", features = ["pg11"], default-features = false }
pg-bridge-macros = { path = "../pg-bridge-macros" }
lazy_static = "1.4.0"
shutdown_hooks = "0.1.0"
colored = "1.9.1"
libc = "0.2.66"
postgres = "0.17.0"
