[package]
name = "pg-bridge-tests"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
pg10 = ["pg-bridge/pg10"]
pg11 = ["pg-bridge/pg11"]
pg12 = ["pg-bridge/pg12"]

[dependencies]
pg-bridge = { path = "../pg-bridge", default-features = false }
pg-bridge-macros = { path = "../pg-bridge-macros" }
lazy_static = "1.4.0"
shutdown_hooks = "0.1.0"
colored = "1.9.1"
libc = "0.2.66"
postgres = "0.17.0"
