[package]
name = "pgrx-bindgen"
description = "additional bindgen support for pgrx"
version = "0.12.2"
edition = "2021"
license = "MIT"
homepage = "https://github.com/pgcentralfoundation/pgrx"
repository = "https://github.com/pgcentralfoundation/pgrx"
documentation = "https://docs.rs/pgrx-bindgen"

[dependencies]
pgrx-pg-config.workspace = true

eyre.workspace = true
proc-macro2.workspace = true
syn.workspace = true
walkdir.workspace = true

bindgen = { version = "0.69.4", default-features = false, features = ["runtime"] }
clang-sys = { version = "1", features = ["clang_6_0", "runtime"] }
quote = "1.0.33"
shlex = "1.3" # shell lexing, also used by many of our deps
