[package]
name = "pgrx-pg-config"
version = "0.9.0"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "A Postgres pg_config wrapper for 'pgrx'"
homepage = "https://github.com/tcdi/pgrx"
repository = "https://github.com/tcdi/pgrx"
documentation = "https://docs.rs/pgrx-pg-config"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
eyre = "0.6.8"
pathsearch = "0.2.0"
owo-colors = "3.5.0"
serde = { version = "1.0.163", features = [ "derive" ] }
serde_derive = "1.0.163"
serde_json = "1.0.96"
toml = "0.7.4"
url = "2.3.1"
cargo_toml = "0.15.2"
