[package]
name = "pgrx-pg-sys"
version = "0.9.5"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Generated Rust bindings for Postgres internals, for use with 'pgrx'"
homepage = "https://github.com/tcdi/pgrx"
repository = "https://github.com/tcdi/pgrx"
documentation = "https://docs.rs/pgrx-pg-sys"
readme = "README.md"
edition = "2021"

[features]
default = [ ]
pg11 = [ ]
pg12 = [ ]
pg13 = [ ]
pg14 = [ ]
pg15 = [ ]
cshim = [ ]

[package.metadata.docs.rs]
features = ["pg14", "cshim"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memoffset = "0.9.0"
pgrx-macros = { path = "../pgrx-macros/", version = "=0.9.5" }
pgrx-sql-entity-graph = { path = "../pgrx-sql-entity-graph/", version = "=0.9.5" }
serde = { version = "1.0", features = [ "derive" ] } # impls on pub types
# polyfill until #![feature(strict_provenance)] stabilizes
sptr = "0.3"
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.65.1", default-features = false, features = ["runtime"] }
pgrx-pg-config= { path = "../pgrx-pg-config/", version = "=0.9.5" }
proc-macro2 = "1.0.60"
quote = "1.0.28"
syn = { version = "1.0.109", features = [ "extra-traits", "full", "fold", "parsing" ] }
eyre = "0.6.8"
shlex = "1.1.0" # shell lexing, also used by many of our deps
once_cell = "1.18.0"
