#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.
 
[package]
name = "pgrx-pg-sys"
version = "0.9.7"
authors = ["PgCentral Foundation, Inc. <contact@pgcentral.org>"]
license = "MIT"
description = "Generated Rust bindings for Postgres internals, for use with 'pgrx'"
homepage = "https://github.com/pgcentralfoundation/pgrx/"
repository = "https://github.com/pgcentralfoundation/pgrx/"
documentation = "https://docs.rs/pgrx-pg-sys"
readme = "README.md"
edition = "2021"

[features]
default = [ ]
pg11 = [ ]
pg12 = [ ]
pg13 = [ ]
pg14 = [ ]
pg15 = [ ]
pg16 = [ ]
cshim = [ ]

[package.metadata.docs.rs]
features = ["pg14", "cshim"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
memoffset = "0.9.0"
pgrx-macros = { path = "../pgrx-macros/", version = "=0.9.7" }
pgrx-sql-entity-graph = { path = "../pgrx-sql-entity-graph/", version = "=0.9.7" }
serde = { version = "1.0", features = [ "derive" ] } # impls on pub types
# polyfill until #![feature(strict_provenance)] stabilizes
sptr = "0.3"
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.66.1", default-features = false, features = ["runtime"] }
pgrx-pg-config= { path = "../pgrx-pg-config/", version = "=0.9.7" }
proc-macro2 = "1.0.63"
quote = "1.0.29"
syn = { version = "1.0.109", features = [ "extra-traits", "full", "fold", "parsing" ] }
eyre = "0.6.8"
shlex = "1.1.0" # shell lexing, also used by many of our deps
once_cell = "1.18.0"
