#LICENSE Portions Copyright 2019-2021 ZomboDB, LLC.
#LICENSE
#LICENSE Portions Copyright 2021-2023 Technology Concepts & Design, Inc.
#LICENSE
#LICENSE Portions Copyright 2023-2023 PgCentral Foundation, Inc. <contact@pgcentral.org>
#LICENSE
#LICENSE All rights reserved.
#LICENSE
#LICENSE Use of this source code is governed by the MIT license that can be found in the LICENSE file.
 
[package]
name = "pgrx-tests"
version = "0.10.0-beta.4"
authors = ["PgCentral Foundation, Inc. <contact@pgcentral.org>"]
license = "MIT"
description = "Test framework for 'pgrx'-based Postgres extensions"
homepage = "https://github.com/pgcentralfoundation/pgrx/"
repository = "https://github.com/pgcentralfoundation/pgrx/"
documentation = "https://docs.rs/pgrx-tests"
readme = "README.md"
edition = "2021"

[lib]
crate-type = [ "cdylib", "lib" ]

[features]
default = [ "proptest" ]
pg11 = [ "pgrx/pg11" ]
pg12 = [ "pgrx/pg12" ]
pg13 = [ "pgrx/pg13" ]
pg14 = [ "pgrx/pg14" ]
pg15 = [ "pgrx/pg15" ]
pg16 = [ "pgrx/pg16" ]
pg_test = [ ]
proptest = [ "dep:proptest" ]
cshim = [ "pgrx/cshim" ]
no-schema-generation = [ "pgrx/no-schema-generation", "pgrx-macros/no-schema-generation" ]

[package.metadata.docs.rs]
features = ["pg14", "proptest"]
no-default-features = true
targets = ["x86_64-unknown-linux-gnu"]
# Enable `#[cfg(docsrs)]` (https://docs.rs/about/builds#cross-compiling)
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap-cargo = "0.11.0"
owo-colors = "3.5.0"
once_cell = "1.18.0"
libc = "0.2.147"
pgrx-macros = { path = "../pgrx-macros", version = "=0.10.0-beta.4" }
pgrx-pg-config = { path = "../pgrx-pg-config", version = "=0.10.0-beta.4" }
postgres = "0.19.6"
proptest = { version = "1", optional = true }
regex = "1.9.3"
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.29.8"
eyre = "0.6.8"
thiserror = "1.0"
rand = "0.8.5"

[dev-dependencies]
eyre = "0.6.8"  # testing functions that return `eyre::Result`
trybuild = "1"

[dependencies.pgrx]
path = "../pgrx"
default-features = false
version = "=0.10.0-beta.4"
