[package]
name = "pgrx-version-updater"
version = "0.1.1"
edition = "2021"
authors = ["ZomboDB, LLC <zombodb@gmail.com>"]
license = "MIT"
description = "Standalone tool to update PGRX Cargo.toml versions and dependencies in preparation for a release."

[dependencies]
clap = { version = "4.3.1", features = [ "env", "derive" ] }
owo-colors = "3.5.0"
toml_edit = { version = "0.19.10" }
walkdir = "2"
